--- a/library.properties
+++ b/library.properties
@@ -5,4 +5,5 @@ maintainer=nopnop2002
 sentence=Arduino stm32 support files for nRF24L01 RF modules.
 paragraph=Arduino_Core_STM32 supports SPI library, but only works in Transaction SPI Mode. This repository works with Transaction SPI Mode.
 category=Communication
+url=https://github.com/nopnop2002/Arduino-STM32-nRF24L01
 architectures=avr,arm,stm32,esp8266
